@@ -1,0 +1,174 @@
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//
+// TGUI - Texus' Graphical User Interface
+// Copyright (C) 2012-2019 Bruno Van de Velde (vdv_b@tgui.eu)
+//
+// This software is provided 'as-is', without any express or implied warranty.
+// In no event will the authors be held liable for any damages arising from the use of this software.
+//
+// Permission is granted to anyone to use this software for any purpose,
+// including commercial applications, and to alter it and redistribute it freely,
+// subject to the following restrictions:
+//
+// 1. The origin of this software must not be misrepresented;
+//    you must not claim that you wrote the original software.
+//    If you use this software in a product, an acknowledgment
+//    in the product documentation would be appreciated but is not required.
+//
+// 2. Altered source versions must be plainly marked as such,
+//    and must not be misrepresented as being the original software.
+//
+// 3. This notice may not be removed or altered from any source distribution.
+//
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+#include <TGUI/SubwidgetContainer.hpp>
+
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+namespace tgui
+{
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    SubwidgetContainer::SubwidgetContainer()
+    {
+        m_draggableWidget = true;
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::setSize(const Layout2d& size)
+    {
+        m_container->setSize(size);
+        Widget::setSize(size);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::leftMousePressed(Vector2f pos)
+    {
+        m_container->leftMousePressed(pos - getPosition());
+        Widget::leftMousePressed(pos);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::leftMouseReleased(Vector2f pos)
+    {
+        m_container->leftMouseReleased(pos - getPosition());
+        Widget::leftMouseReleased(pos);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::rightMousePressed(Vector2f pos)
+    {
+        m_container->rightMousePressed(pos - getPosition());
+        Widget::rightMousePressed(pos);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::rightMouseReleased(Vector2f pos)
+    {
+        m_container->rightMouseReleased(pos - getPosition());
+        Widget::rightMouseReleased(pos);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::mouseMoved(Vector2f pos)
+    {
+        m_container->mouseMoved(pos - getPosition());
+        Widget::mouseMoved(pos);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::keyPressed(const sf::Event::KeyEvent& event)
+    {
+        m_container->keyPressed(event);
+        Widget::keyPressed(event);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::textEntered(std::uint32_t key)
+    {
+        m_container->textEntered(key);
+        Widget::textEntered(key);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    bool SubwidgetContainer::mouseWheelScrolled(float delta, Vector2f pos)
+    {
+        m_container->mouseWheelScrolled(delta, pos - getPosition());
+        return Widget::mouseWheelScrolled(delta, pos);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::mouseNoLongerOnWidget()
+    {
+        m_container->mouseNoLongerOnWidget();
+        Widget::mouseNoLongerOnWidget();
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::leftMouseButtonNoLongerDown()
+    {
+        m_container->leftMouseButtonNoLongerDown();
+        Widget::leftMouseButtonNoLongerDown();
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::rightMouseButtonNoLongerDown()
+    {
+        m_container->rightMouseButtonNoLongerDown();
+        Widget::rightMouseButtonNoLongerDown();
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    Widget::Ptr SubwidgetContainer::askToolTip(Vector2f mousePos)
+    {
+        return m_container->askToolTip(mousePos - getPosition());
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    std::unique_ptr<DataIO::Node> SubwidgetContainer::save(SavingRenderersMap& renderers) const
+    {
+        return m_container->save(renderers);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::load(const std::unique_ptr<DataIO::Node>& node, const LoadingRenderersMap& renderers)
+    {
+        m_container->load(node, renderers);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::update(sf::Time elapsedTime)
+    {
+        m_container->update(elapsedTime);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    void SubwidgetContainer::draw(sf::RenderTarget& target, sf::RenderStates states) const
+    {
+        states.transform.translate(getPosition());
+        m_container->draw(target, states);
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+}
+
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
