@@ -15,6 +15,7 @@ TGUI 0.8.6  (TBD)
 - Added HeaderClicked signal to ListView
 - Addded Signals namespace with strings for signals of all widgets
 - Added VerticalScroll property to Slider, Scrollbar and SpinButton, for more intuitive usage
+- Added SubwidgetContainer class that should simplify combining widgets for a custom widget
 - SignalItem (used by ListBox and ComboBox) can now have the item index as optional parameter
 - Container widgets didn't pass right click event to child widgets
 - Widget state was incorrect when starting a show/hide animation while another was still busy
